-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0 RC
-
None
-
Linux/X11
-
11836be1274196bca5883973b3c8f31dc07c34f7
Example code:
#include <QApplication> #include <QGridLayout> #include <QLineEdit> #include <QWidget> int main(int argc, char *argv[]) { QApplication app(argc, argv); QWidget w; w.setLayout(new QGridLayout); w.layout()->addWidget(new QLineEdit); w.resize(500, 0); w.show(); return app.exec(); }
Actual result: window is not visible
Expected result: window is visible (layout will change the window height, so it must be visible)
Regression resulted from QTBUG-49445
For Gerrit Dashboard: QTBUG-51788 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
152011,2 | Remove Qt::WA_OutsideWSRange flag even if the widget is not yet visible. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
153951,2 | QtWidgets: Add autotests for Qt::WA_OutsideWSRange flag | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |