Remove Qt::WA_OutsideWSRange flag even if the widget is not yet visible.

Show the widget when its initial size is 0 and the layout changes the
size during showing.

Task-number: QTBUG-51788
Change-Id: I3251ac27328f9715ff13d96e1b82fbf824d9e79d
Reviewed-by: Dmitry Shachnev <mitya57@gmail.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>